Version 2.0.0-dev
- removed support for section menu.conditions
- marked some classes as final

Version 1.2.1
- removed build.xml from releases
- deprecated constant MenuExtension::SECTION_CONDITIONS (was forgotten in 1.1.0)

Version 1.2.0
- added virtual property Menu::$allowedItems
- added dependency on nexendrie/utils
- added BaseCondition

Version 1.1.0
- menu item conditions can be manually registered as services now
- deprecated section menu.conditions
- MenuFactory is not autowired anymore

Version 1.0.0
- added conditional menu items
- menus are now created by a factory (in DIC extension)
- renamed constants in MenuExtension

Version 0.3.0
- it is possible to define new menu types from neon
- added support for translating

Version 0.2.0
- allowed setting menu's html id
- menu type's is now determined in template, see documentation
- changed thrown exceptions
- added support for custom menu types

Version 0.1.0
- first version