@@ -1,0 +1,18 @@
+<?php
+declare(strict_types=1);
+
+namespace Nexendrie\Menu;
+
+use Nette\Application\UI\Presenter;
+
+/**
+ * TestPresenter
+ *
+ * @author Jakub Konečný
+ */
+class TestPresenter extends Presenter {
+  public function actionNew() {
+  
+  }
+}
+?>
