@@ -1,4 +1,4 @@
   <nav id="menu">
     <h3>Menu</h3>
-    <p><a href="plink|Test:">Test</a> <a href="plink|Test:new">New Test</a> <a href="plink|Test:structured">Structured</a></p>
+    <p><a href="http://test.bench/">Test</a> <a href="http://test.bench/test/new">New Test</a> <a href="http://test.bench/test/structured">Structured</a></p>
   </nav>
