@@ -1,3 +1,3 @@
   <nav id="menu">
-    <a href="plink|Test:">Test</a> <a href="plink|Test:new">New Test</a> <a href="plink|Test:structured">Structured</a>
+    <a href="http://test.bench/">Test</a> <a href="http://test.bench/test/new">New Test</a> <a href="http://test.bench/test/structured">Structured</a>
   </nav>
