@@ -1,0 +1,7 @@
+  <nav id="menu">
+    <ul>
+        <li><a href="https://nexendrie.gitlab.io/menu">Absolute</a></li>
+        <li><a href="">Javascript</a></li>
+        <li><a href="http://test.bench/">Presenter</a></li>
+    </ul>
+  </nav>
