@@ -1,7 +1,7 @@
   <nav id="testMenu">
     <h3>Menu</h3>
     <ul>
-        <li><a href="plink|Test:">Test</a></li>
-        <li><a href="plink|Test:new">New Test</a></li>
+        <li><a href="http://test.bench/">Test</a></li>
+        <li><a href="http://test.bench/test/new">New Test</a></li>
     </ul>
   </nav>
