@@ -1,7 +1,7 @@
   <nav id="testMenu">
     <h3>1Menu</h3>
     <ul>
-        <li><a href="plink|Test:">1Test</a></li>
-        <li><a href="plink|Test:new">1New Test</a></li>
+        <li><a href="http://test.bench/">1Test</a></li>
+        <li><a href="http://test.bench/test/new">1New Test</a></li>
     </ul>
   </nav>
